// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Posts carousel renders loader 1`] = `
<div
  className="posts-carousel-container"
>
  <div
    className="ui active loader"
  />
  <Footer mock
    page={1}
    title=""
  />
</div>
`;

exports[`Posts carousel renders posts container 1`] = `
<div
  className="posts-carousel-container"
>
  <Footer mock
    page={1}
    title="Cat 1"
  />
</div>
`;
